updated racing app with frontend and backend